Fixed Profile Link Redirect and Post CSS
-Slightly darkened the blue background to make it somewhat easier to differentiate from buttons
-Modified comments and added custom scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 
 .App {
   text-align: center;
-  background-color: #2D86D8;
+  background-color: #236cb0;
 }
 
 .App-logo {
@@ -12,7 +12,7 @@
 
 .App-header {
   
-  background-color: #2D86D8;
+  background-color: #236cb0;
   min-height: 100vh;
   display: flex;
   flex-direction: row;
@@ -251,7 +251,7 @@ input {
   left: 72%;
   position: fixed;
   top: 0px;
-  background-color: #2D86D8;
+  background-color: #236cb0;
   height:100%;
   width: 28%;
 }
@@ -416,17 +416,21 @@ input {
 }
 
 .desktop-delete {
+    background: #FF5959;
+    display: inline-block;
     max-width: 426px;
     width: 80%;
     height: 47.41px;
-    background: #FF5959;
     padding: 0;
     border: none;
     color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
+    margin: 20px;
+    margin-top: 10%;
     cursor: pointer;
     transition-duration: 0.4s;
+    border-radius: 24px;
 }
 
 .desktop-delete:hover {
@@ -655,4 +659,20 @@ heading{
 
 .allowing-button button:hover {
   cursor: pointer;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
